# Scene-Graph-Benchmark.pytorch

./: .gitignore  .gitmodules  Dockerfile  bootstrap.sh  data  models  pyproject.toml  run_docker.sh
configs/: e2e_relation_X_101_32_8_FPN_1x.yaml  e2e_relation_detector_X_101_32_8_FPN_1x_AV.yaml
configs/caffe2/: e2e_mask_rcnn_R_50_FPN_1x_caffe2.yaml
configs/cityscapes/: e2e_faster_rcnn_R_50_FPN_1x_from_COCO.yaml  e2e_faster_rcnn_X_101_32_8_FPN_1x_from_COCO.yaml  e2e_mask_rcnn_R_50_FPN_1x_from_COCO.yaml  e2e_mask_rcnn_X_101_32_8_FPN_1x_from_COCO.yaml
demo/: predictor.py
maskrcnn_benchmark/config/: paths_catalog.py
maskrcnn_benchmark/data/datasets/: coco.py  visual_genome.py
maskrcnn_benchmark/data/datasets/evaluation/vg/: sgg_eval.py  vg_eval.py
maskrcnn_benchmark/engine/: inference.py  trainer.py
maskrcnn_benchmark/image_retrieval/: preprocessing.py
maskrcnn_benchmark/modeling/: matcher.py  poolers.py
maskrcnn_benchmark/modeling/roi_heads/box_head/: box_head.py  inference.py
maskrcnn_benchmark/modeling/roi_heads/mask_head/: mask_head.py
maskrcnn_benchmark/modeling/roi_heads/relation_head/: inference.py
maskrcnn_benchmark/structures/: segmentation_mask.py
maskrcnn_benchmark/utils/: c2_model_loading.py  imports.py
scripts/: test_sgdet_pretrainmotif.sh  train_fasterrcnn_cityscapes.sh  train_maskrcnn_cityscapes.sh  train_predcls_motif.sh  train_sgcls_motif.sh  train_sgdet_motif.sh
tools/: detector_pretrain_net.py  relation_test_net.py  relation_train_net.py
tools/cityscapes/: coco_model_to_cityscapes_model.py  convert_cityscapes_to_coco.py
